# MemGuard

./: .env  .env.example  .gitignore  README.CN.md  README.md  __init__.py  agent_demo.py  build.bat  cli.py  config.py  demo.py  memguard.spec  pyproject.toml  requirements.txt  run.py
audit/: __init__.py  audit_log.py
db/: __init__.py  chroma_wrapper.py  lance_wrapper.py
gateway/: __init__.py  filters.py  immune_client.py  proxy.py
models/: __init__.py  memory_entry.py
scanner/: __init__.py  constitutional.py  periodic_scanner.py
static/: app.js  index.html  style.css
tests/: test_db.py  test_memory_entry.py  test_scanner.py
